--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,4 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-.idea/kry-go.iml
-.idea/modules.xml
-.idea/vcs.xml
-.idea/workspace.xml
+.idea/
